k8s/13-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexo-park
  namespace: nexo-park
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: nexo.local
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service: { name: kong, port: { number: 8000 } }
          - path: /usuarios
            pathType: Prefix
            backend:
              service: { name: kong, port: { number: 8000 } }
          - path: /zonas
            pathType: Prefix
            backend:
              service: { name: kong, port: { number: 8000 } }
          - path: /vehiculos
            pathType: Prefix
            backend:
              service: { name: kong, port: { number: 8000 } }
          - path: /asignaciones
            pathType: Prefix
            backend:
              service: { name: kong, port: { number: 8000 } }
          - path: /tickets
            pathType: Prefix
            backend:
              service: { name: kong, port: { number: 8000 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: frontend, port: { number: 3000 } }
